Closed
Bug 1655933
Opened 5 years ago
Closed 5 years ago
Can't print uncacheable images.
Categories
(Core :: Printing: Output, defect, P3)
Core
Printing: Output
Tracking
()
VERIFIED
FIXED
81 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | --- | verified |
| firefox81 | --- | verified |
People
(Reporter: emilio, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
STR:
- Go to https://picsum.photos
ER:
- The photo you're seeing in the document is printed.
AR:
- We reload the image and get a different one (potentially).
| Assignee | ||
Comment 1•5 years ago
|
||
This allows to print images that we'd otherwise reload.
Comment 2•5 years ago
|
||
Set release status flags based on info from the regressing bug 1648064
status-firefox79:
--- → unaffected
status-firefox80:
--- → affected
status-firefox81:
--- → affected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Updated•5 years ago
|
Attachment #9166790 -
Attachment description: Bug 1655933 - Allow images from non-static documents to get reused without validation. r=tnikkel → Bug 1655933 - Allow images from non-static documents to get reused in their static clones without validation. r=tnikkel
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1cdb7ea0225d
Allow images from non-static documents to get reused in their static clones without validation. r=tnikkel
| Assignee | ||
Updated•5 years ago
|
Severity: -- → S2
Priority: -- → P3
Updated•5 years ago
|
Keywords: regression
Comment 4•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
| Assignee | ||
Comment 6•5 years ago
|
||
Comment on attachment 9166790 [details]
Bug 1655933 - Allow images from non-static documents to get reused in their static clones without validation. r=tnikkel
Beta/Release Uplift Approval Request
- User impact if declined: Can't print uncacheable images.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple change to the image cache to allow reuse of non-cacheable images for printing
- String changes made/needed: none
Flags: needinfo?(emilio)
Attachment #9166790 -
Flags: approval-mozilla-beta?
| Assignee | ||
Updated•5 years ago
|
Flags: qe-verify+
Comment 7•5 years ago
|
||
Comment on attachment 9166790 [details]
Bug 1655933 - Allow images from non-static documents to get reused in their static clones without validation. r=tnikkel
printing regression, approved for 80.0b3
Attachment #9166790 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
QA Whiteboard: [qa-triaged]
Comment 9•5 years ago
|
||
Reproduced this issue using Firefox 81.0a1 (BuildId:20200728213249).
This issue is verified fixed using Firefox 81.0a1 (BuildId:20200802214843) and Firefox 80.0b3 (BuildId:20200803045446) on Windows 10 64bit, macOS 10.14 and Ubuntu 18.04 64bit.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•