Bug 1655933 - Allow images from non-static documents to get reused in their static clones without validation. r=tnikkel

This allows to print images that we'd otherwise reload.

Differential Revision: https://phabricator.services.mozilla.com/D85263